Added Code Style Configuration File

--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -3957,6 +3957,7 @@
     <ClInclude Include="..\engine\util\triBoxCheck.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\engine\.editorconfig" />
     <None Include="..\engine\gui\game\guiAviBitmapCtrl.~cp" />
     <CustomBuild Include="..\engine\math\mMathAMD_ASM.asm">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"$(ProjectDir)..\bin\nasm\nasmw.exe" -f win32 "%(FullPath)" -o "$(IntDir)%(Filename).obj"
