--- a/vc16/TSE.vcxproj.filters
+++ b/vc16/TSE.vcxproj.filters
@@ -2749,6 +2749,7 @@
     <None Include="..\engine\gui\game\guiAviBitmapCtrl.~cp">
       <Filter>Source Files\gui\game</Filter>
     </None>
+    <None Include="..\engine\.editorconfig" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\engine\math\mMath_ASM.asm">
