Implemented some MBU specific functions

--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -568,6 +568,7 @@
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
     <ClCompile Include="..\engine\console\dynamicTypes.cpp" />
+    <ClCompile Include="..\engine\console\extraFunctions.cpp" />
     <ClCompile Include="..\engine\console\scriptObject.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
