--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -85,7 +85,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/openal/win32;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;D3D_DEBUG_INFO;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -106,7 +106,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>ljpeg_DEBUG.lib;lpng_DEBUG.lib;lungif_DEBUG.lib;zlib_DEBUG.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;imm32.lib;version.lib;libqslim_DEBUG.lib;ole32.lib;oleaut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ljpeg_DEBUG.lib;lpng_DEBUG.lib;lungif_DEBUG.lib;lmng_DEBUG.lib;zlib_DEBUG.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;imm32.lib;version.lib;libqslim_DEBUG.lib;ole32.lib;oleaut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>../example/TSE_DEBUG.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>../lib/out.VC16.win32.debug/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -127,7 +127,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../lib/libqslim;../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/openal/win32;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../lib/libqslim;../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_RELEASE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -148,7 +148,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;imm32.lib;version.lib;libqslim.lib;ole32.lib;oleaut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;lmng.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;imm32.lib;version.lib;libqslim.lib;ole32.lib;oleaut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>../example/TSE.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>../lib/out.VC16.win32.release/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -168,7 +168,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/openal/win32;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_RELEASE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -191,7 +191,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;imm32.lib;version.lib;libqslim.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;lmng.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;imm32.lib;version.lib;libqslim.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>../example/TSE_Optimized.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>../lib/out.VC16.win32.release/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -1698,6 +1698,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
+    <ClCompile Include="..\engine\gfx\bitmapMng.cpp" />
     <ClCompile Include="..\engine\gfx\bitmapPng.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
@@ -4012,6 +4013,9 @@
     <ProjectReference Include="ljpeg.vcxproj">
       <Project>{cbc240d6-6629-4e38-8904-e75fee155301}</Project>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+    <ProjectReference Include="lmng.vcxproj">
+      <Project>{bdaff314-4ed0-40de-9c4c-01395382284a}</Project>
     </ProjectReference>
     <ProjectReference Include="lpng.vcxproj">
       <Project>{bcf7d520-caf3-4cf6-8d1a-71a72ebdc146}</Project>
