--- a/vc16/TSE.vcxproj.filters
+++ b/vc16/TSE.vcxproj.filters
@@ -2768,6 +2768,9 @@
     <ClInclude Include="..\engine\interior\interiorSimpleMesh.h">
       <Filter>Source Files\interior</Filter>
     </ClInclude>
+    <ClInclude Include="..\example\shaders\shdrConsts.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\engine\.editorconfig" />
