Implemented PowerUpData class

--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -1382,6 +1382,7 @@
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
     <ClCompile Include="..\engine\game\marble\marble.cpp" />
+    <ClCompile Include="..\engine\game\marble\powerup.cpp" />
     <ClCompile Include="..\engine\game\missionArea.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
@@ -3713,6 +3714,7 @@
     <ClInclude Include="..\engine\game\guiPlayerView.h" />
     <ClInclude Include="..\engine\game\item.h" />
     <ClInclude Include="..\engine\game\marble\marble.h" />
+    <ClInclude Include="..\engine\game\marble\powerup.h" />
     <ClInclude Include="..\engine\game\missionArea.h" />
     <ClInclude Include="..\engine\game\missionMarker.h" />
     <ClInclude Include="..\engine\game\moveManager.h" />
