--- a/vc16/TSE.vcxproj.filters
+++ b/vc16/TSE.vcxproj.filters
@@ -1521,6 +1521,9 @@
     <ClCompile Include="..\engine\game\marble\marble.cpp">
       <Filter>Source Files\game\marble</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\game\marble\powerup.cpp">
+      <Filter>Source Files\game\marble</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\engine\audio\audio.h">
@@ -2802,6 +2805,9 @@
       <Filter>Source Files\core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\game\marble\marble.h">
+      <Filter>Source Files\game\marble</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\game\marble\powerup.h">
       <Filter>Source Files\game\marble</Filter>
     </ClInclude>
   </ItemGroup>
