--- a/vc16/TSE.vcxproj.filters
+++ b/vc16/TSE.vcxproj.filters
@@ -447,9 +447,6 @@
     <ClCompile Include="..\engine\game\gameFunctions.cpp">
       <Filter>Source Files\game</Filter>
     </ClCompile>
-    <ClCompile Include="..\engine\game\gameProcess.cpp">
-      <Filter>Source Files\game</Filter>
-    </ClCompile>
     <ClCompile Include="..\engine\game\gameTSCtrl.cpp">
       <Filter>Source Files\game</Filter>
     </ClCompile>
@@ -1532,6 +1529,12 @@
     </ClCompile>
     <ClCompile Include="..\engine\game\marble\marblecollision.cpp">
       <Filter>Source Files\game\marble</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\sim\processList.cpp">
+      <Filter>Source Files\sim</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\game\gameProcess.cpp">
+      <Filter>Source Files\game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2818,6 +2821,12 @@
     </ClInclude>
     <ClInclude Include="..\engine\game\marble\powerup.h">
       <Filter>Source Files\game\marble</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\sim\processList.h">
+      <Filter>Source Files\sim</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\game\gameProcess.h">
+      <Filter>Source Files\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
