Hifi partially working

--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -1616,6 +1616,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
+    <ClCompile Include="..\engine\game\tickCache.cpp" />
     <ClCompile Include="..\engine\game\trigger.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
@@ -3729,6 +3730,7 @@
     <ClInclude Include="..\engine\game\showTSShape.h" />
     <ClInclude Include="..\engine\game\sphere.h" />
     <ClInclude Include="..\engine\game\staticShape.h" />
+    <ClInclude Include="..\engine\game\tickCache.h" />
     <ClInclude Include="..\engine\game\trigger.h" />
     <ClInclude Include="..\engine\game\tsStatic.h" />
     <ClInclude Include="..\engine\game\vehicles\flyingVehicle.h" />
