--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -1810,6 +1810,7 @@
     <ClCompile Include="..\engine\gfx\D3d\screenshotD3D.cpp" />
     <ClCompile Include="..\engine\gfx\ddsLoader.cpp" />
     <ClCompile Include="..\engine\gfx\debugDraw.cpp" />
+    <ClCompile Include="..\engine\gfx\gammaBuffer.cpp" />
     <ClCompile Include="..\engine\gfx\gBitmap.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
@@ -3757,6 +3758,7 @@
     <ClInclude Include="..\engine\gfx\D3d\screenshotD3D.h" />
     <ClInclude Include="..\engine\gfx\ddsFile.h" />
     <ClInclude Include="..\engine\gfx\debugDraw.h" />
+    <ClInclude Include="..\engine\gfx\gammaBuffer.h" />
     <ClInclude Include="..\engine\gfx\gBitmap.h" />
     <ClInclude Include="..\engine\gfx\gFont.h" />
     <ClInclude Include="..\engine\gfx\gfxCanon.h" />
